作業分コミット

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,7 @@
         android:onClick="addTaskList"
         android:layout_alignBottom="@+id/addTask"
         android:layout_alignRight="@+id/addTask"
-        android:layout_alignEnd="@+id/addTask"
-        android:nestedScrollingEnabled="false" />
+        android:layout_alignEnd="@+id/addTask" />
 
     <ListView
         android:layout_width="wrap_content"
